<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_changePassword_linearLayout_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <EditText
        android:hint="@string/s_dialog_changePassword_editText_hint_currentPassword"
        android:id="@+id/dialog_changePassword_editText_currentPassword"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <requestFocus />
    </EditText>

    <EditText
        android:hint="@string/s_dialog_changePassword_editText_hint_newPassword"
        android:id="@+id/dialog_changePassword_editText_newPassword"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
    </EditText>

    <EditText
        android:hint="@string/s_dialog_changePassword_editText_hint_repeatNewPassword"
        android:id="@+id/dialog_changePassword_editText_repeatNewPassword"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
    </EditText>
</LinearLayout>