...

    <!-- Global Strings -->
    <string name="global_appName">Util3D</string>
    <string name="global_fragmentName_createAccount">Create Account</string>
    <string name="global_fragmentName_createProject">Create Project</string>
    <string name="global_fragmentName_dashboard">Dashboard</string>
    <string name="global_fragmentName_login">Login</string>
    <string name="global_fragmentName_map">Map</string>
    <string name="global_fragmentName_openProject">Open Project</string>
    <string name="global_fragmentName_settings">Settings</string>

    <!-- LoginFragment Strings -->
    <string name="s_fragment_login_editText_hint_username">Email</string>
    <string name="s_fragment_login_editText_hint_password">Password</string>
    <string name="s_fragment_login_button_text_login">Login</string>
    <string name="s_fragment_login_button_text_forgotPassword">Forgot Password</string>
...
    <string name="s_fragment_dashboard_button_logout">Logout</string>
    <string name="s_fragment_dashboard_alertMessage_logOutPrompt">Are you sure you want to log out?</string>
    <string name="s_fragment_dashboard_alertMessage_loggedOut">Logout successful.</string>

    <!-- SettingsFragment Strings -->
    <string name="s_fragment_settings_title">Settings</string>
    <string name="s_fragment_settings_button_changePassword">Change Password</string>
    <string name="s_fragment_settings_button_changeEmail">Change Email</string>
    <string name="s_fragment_settings_button_changeUsername">Change Username</string>
    <string name="s_fragment_settings_button_deleteAccount">Delete Account</string>
    <string name="s_fragment_settings_imageButton_devNotes">Developer Notes</string>

    <!-- ChangePassword Dialog Strings -->
...
